--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 sidux-searchplugins (0.1.3) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * add VCS control headers.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue,  5 Dec 2006 14:04:49 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Sep 2007 20:25:05 +0200
 
 sidux-searchplugins (0.1.2) unstable; urgency=low
 
