--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ sidux-searchplugins (0.1.3) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
   * add VCS control headers.
+  * update syntax for Vcs headers in debian/control
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Sep 2007 20:25:05 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 07 Oct 2007 14:51:07 +0200
 
 sidux-searchplugins (0.1.2) unstable; urgency=low
 
