--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,9 @@
-sidux-searchplugins (0.1.3) UNRELEASED; urgency=low
+sidux-searchplugins (0.1.3) unstable; urgency=low
 
-  * NOT RELEASED YET
   * add VCS control headers.
   * update syntax for Vcs headers in debian/control
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 07 Oct 2007 14:51:07 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 25 Oct 2007 19:31:07 +0200
 
 sidux-searchplugins (0.1.2) unstable; urgency=low
 
