--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-sidux-searchplugins (0.1.4) UNRELEASED; urgency=low
+sidux-searchplugins (0.1.4) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * new favicon fitting the eros theme
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 25 Oct 2007 19:32:56 +0200
+ -- Chris Hildebrandt <webmaster@sidux.com>  Thu, 31 Oct 2007 12:24:47 +0100
 
 sidux-searchplugins (0.1.3) unstable; urgency=low
 
