--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-searchplugins (0.1.5) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 31 Oct 2007 14:05:34 +0100
+
 sidux-searchplugins (0.1.4) unstable; urgency=low
 
   * new favicon fitting the eros theme
