--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 sidux-searchplugins (0.1.5) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * update to Standards-Version 3.7.3, no changes necessary.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 31 Oct 2007 14:05:34 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 14:59:40 +0100
 
 sidux-searchplugins (0.1.4) unstable; urgency=low
 
