sidux-searchplugins (0.1.5) unstable; urgency=low
  * update to Standards-Version 3.7.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 14:59:40 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-sidux-searchplugins (0.1.5) UNRELEASED; urgency=low
+sidux-searchplugins (0.1.5) unstable; urgency=low
 
-  * NOT RELEASED YET
   * update to Standards-Version 3.7.3, no changes necessary.
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 14:59:40 +0100
