--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-searchplugins (0.1.7) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 19 Jan 2008 02:43:15 +0100
+
 sidux-searchplugins (0.1.6) unstable; urgency=low
 
   * update to debhelper compat 6.
