--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-searchplugins (0.1.8) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 21 Feb 2008 01:23:45 +0100
+
 sidux-searchplugins (0.1.7) unstable; urgency=low
 
   * appease lintian and write (C) as © in debian/copyright.
