--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-sidux-searchplugins (0.1.9) UNRELEASED; urgency=low
+sidux-searchplugins (0.1.9) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * bump standards version to 3.8.0, no changes necessary.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 07 May 2008 02:35:04 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Jun 2008 19:41:21 +0200
 
 sidux-searchplugins (0.1.8) unstable; urgency=low
 
