--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-searchplugins (0.1.10) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Jun 2008 19:42:35 +0200
+
 sidux-searchplugins (0.1.9) unstable; urgency=low
 
   * bump standards version to 3.8.0, no changes necessary.
