--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 sidux-searchplugins (0.1.10) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * make lintian happy and depend on ${misc:Depends}.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Jun 2008 19:42:35 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 08 Dec 2008 03:05:31 +0100
 
 sidux-searchplugins (0.1.9) unstable; urgency=low
 
