--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-searchplugins (0.1.11) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 08 Dec 2008 23:55:26 +0100
+
 sidux-searchplugins (0.1.10) unstable; urgency=low
 
   * make lintian happy and depend on ${misc:Depends}.
