* fix desktop-entry-contains-encoding-key. * clarify licensing.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-sidux-searchplugins (0.1.11) UNRELEASED; urgency=low
+sidux-searchplugins (0.1.11) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * fix desktop-entry-contains-encoding-key.
+  * clarify licensing.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 08 Dec 2008 23:55:26 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 20 Feb 2009 18:10:01 +0100
 
 sidux-searchplugins (0.1.10) unstable; urgency=low
 
