--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-searchplugins (0.1.13) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 26 Apr 2010 01:26:29 +0200
+
 sidux-searchplugins (0.1.12) unstable; urgency=low
 
   * switch to dpkg-source 3.0 (native) format.
