--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-searchplugins (0.1.14) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 04 Aug 2010 04:39:30 +0200
+
 sidux-searchplugins (0.1.13) unstable; urgency=low
 
   * bump standards version to 3.9.1, no changes necessary.
