--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-sidux-searchplugins (0.1.14) UNRELEASED; urgency=low
+sidux-searchplugins (0.1.14) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * switch to compat level 8.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 04 Aug 2010 04:39:30 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Aug 2010 05:23:50 +0200
 
 sidux-searchplugins (0.1.13) unstable; urgency=low
 
