--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sidux-searchplugins (0.1.15) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Aug 2010 05:24:14 +0200
+
 sidux-searchplugins (0.1.14) unstable; urgency=low
 
   * switch to compat level 8.
